--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <a href="https://www.linkedin.com" target="_blank">
             PlaceholderA
         </a>
-        you can visit our LinkedIn profiles by clicking out names. The purpose of this timer is to help you get tasks done with the pomodoro style of working.</p>
-        <p class="instructions-paragraph">You can start by selecting the time intervals for the time you want to work with and the select the time for breaks.</p>
+        you can visit our LinkedIn profiles by clicking out names. The purpose of this timer is to help you get tasks done with the pomodoro style of working. You can start by selecting the time intervals for the time you want to work with and the select the time for breaks.</p>
         <div>
-            <h5>Work timer</h5>
+            <h3>Work timer</h3>
             <input type="time">
-            <h5>Rest timer</h5>
+            <h3>Rest timer</h3>
             <input type="time">
         </div>
         <button>Start timer</button>
