basic ui complete

--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-        <title>AP Pomodoro</title>
-    </head>
-    <body>
-        <h1 class="header">Pomodoro timer.</h1>
-        <p class="main-paragraph">This is a join project made by <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwjmx6mb57WAAxX-LkQIHc9MCtUQPAgJ" target="_blank">
-            PlaceholderP
-        </a> and 
-        <a href="https://www.linkedin.com" target="_blank">
-            PlaceholderA
-        </a>
-        you can visit our LinkedIn profiles by clicking out names. The purpose of this timer is to help you get tasks done with the pomodoro style of working. You can start by selecting the time intervals for the time you want to work with and the select the time for breaks.</p>
-        <div>
-            <h3>Work timer</h3>
-            <input type="time">
-            <h3>Rest timer</h3>
-            <input type="time">
-        </div>
-        <button>Start timer</button>
-        <button>Add Task.</button>
-        <input type="text" placeholder="Add task">
-    </body>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>AP Pomodoro</title>
+</head>
+
+<body>
+
+    <div class="header">
+        <h1 class="borel">
+            Pomodoro Timer
+        </h1>
+    </div>
+
+
+    <div class="middle">
+            <button class="btn">Pomodoro</button>
+            <button class="btn">Break</button>
+        <p id="time">00:00</p>
+            <button class="btn">Start</button>
+            <button class="btn">Pause</button>
+    </div>
+
+
+    <div class="footer">
+        <p class="borel">
+            Made by
+            <a href="#">Placeholder</a> & <a href="#">Placeholder</a>.
+        </p>
+    </div>
+
+</body>
+
 </html>
