--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <title>AP Pomodoro</title>
-</head>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>AP Pomodoro</title>
+    </head>
 
-<body>
+    <body>
 
-    <div class="header">
-        <h1 class="borel">
-            Pomodoro Timer
-        </h1>
-    </div>
-
-
-    <div class="middle">
-            <button class="btn">Pomodoro</button>
-            <button class="btn">Break</button>
-        <p id="time">00:00</p>
-            <button class="btn">Start</button>
-            <button class="btn">Pause</button>
-    </div>
+        <div class="header">
+            <h1 class="borel">
+                Pomodoro Timer
+            </h1>
+        </div>
 
 
-    <div class="footer">
-        <p class="borel">
-            Made by
-            <a href="#">Placeholder</a> & <a href="#">Placeholder</a>.
-        </p>
-    </div>
+        <div class="middle">
+                <button class="pomodoro">Pomodoro</button>
+                <button class="break">Break</button>
+            <p id="time">00:00</p>
+                <button class="start">Start</button>
+                <button class="pause">Pause</button>
+        </div>
 
-</body>
+
+        <div class="footer">
+            <p class="borel">
+                Made by
+                <a href="#">Placeholder</a> & <a href="#">Placeholder</a>.
+            </p>
+        </div>
+
+        <script src="app.js"></script>
+    </body>
 
 </html>
