added task bar and displays tasks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
                 <button class="start">Start</button>
                 <button class="pause">Pause</button>
         </div>
+        
+        <div class="tasks">
+            <input id="taskInput" type="text" placeholder="Enter tasks here...">
+            <button class="add">Add Task</button>
+            <button class="delete">Delete Task</button>
+        </div>
 
+        <div class="uncompletedTasks">
+            <ul id="tasksOutput"></ul>
+        </div>
 
         <div class="footer">
             <p class="borel">
