--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="footer">
             <p class="borel">
                 Made by
-                <a href="#">Placeholder</a> & <a href="#">Placeholder</a>.
+                <a href="https://www.linkedin.com/in/alejandro-quiros-238b451aa/" target="_blank" rel="noreferrer noopener">Alejandro Quiros</a> & <a href="https://www.linkedin.com/in/aprashil01/" target="_blank" rel="noreferrer noopener">Prashil Adhara</a>.
             </p>
         </div>
 
