--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             </h1>
         </div>
 
-
         <div class="middle">
                 <button class="pomodoro">Pomodoro</button>
                 <button class="break">Break</button>
@@ -39,7 +38,7 @@
         <div class="footer">
             <p class="borel">
                 Made by
-                <a href="https://www.linkedin.com/in/alejandro-quiros-238b451aa/" target="_blank" rel="noreferrer noopener">Alejandro Quiros</a> & <a href="https://www.linkedin.com/in/aprashil01/" target="_blank" rel="noreferrer noopener">Prashil Adhara</a>.
+                <a href="https://www.linkedin.com/in/alejandro-quiros-238b451aa/" target="_blank" rel="noreferrer noopener">Alejandro Quiros</a>.
             </p>
         </div>
 
